# ppocr-playground

./: .gitignore  README.md  main.py  pyproject.toml  visualize.py
docs/: benchmark-paddleocr-vs-onnx.md  lang-filter.md
src/ppocr_playground/: __init__.py  __main__.py  cli.py  export_onnx.py  io.py  models.py
src/ppocr_playground/engine/: __init__.py  base.py  onnx_sahi.py  onnx_two_phase.py  paddle.py
src/ppocr_playground/onnx_ops/: __init__.py  classification.py  crop.py  detection.py  detr.py  recognition.py  sahi.py  session.py
src/ppocr_playground/pipeline/: __init__.py  structure_onnx.py  structure_paddle.py  table.py
src/ppocr_playground/visualization/: __init__.py  ocr.py  structure.py  table.py
