[project]
name = "ppocr-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "onnxruntime-gpu>=1.24.1",
    "pyclipper>=1.4.0",
    "shapely>=2.1.2",
]

[project.scripts]
ppocr = "ppocr_playground.cli:main"

[dependency-groups]
dev = [
    "onnxsim>=0.4.36",
    "pynvml>=13.0.1",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ppocr_playground"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
